--- a/styles.css
+++ b/styles.css
@@ -7,12 +7,14 @@ body {
 #calculator-container {
     display: flex;
     background-color: yellow;
+    justify-content: center;
 }
 
 .calculator {
     display: flex;
     flex-direction: column;
     background-color: green;
+    border-radius: 16px;
     padding: 16px;
 }
 
@@ -20,7 +22,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: yellow;
+    background-color: lightcyan
 }
 
 .buttons-container {
