--- a/styles.css
+++ b/styles.css
@@ -16,13 +16,19 @@ body {
     background-color: green;
     border-radius: 16px;
     padding: 16px;
+    gap: 8px;
+}
+
+.calculator * {
+    font-size: xx-large;
 }
 
 .screen-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: lightcyan
+    background-color: lightcyan;
+    border-radius: 8px;
 }
 
 .buttons-container {
@@ -31,6 +37,7 @@ body {
     justify-content: center;
     background-color: yellowgreen;
     padding: 8px;
+    border-radius: 8px;
 }
 
 .number-container {
