--- a/styles.css
+++ b/styles.css
@@ -2,18 +2,21 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
+    align-items: stretch;
 }
 
 #title-container {
     display: flex;
     justify-content: center;
     background-color: yellowgreen;
+    flex-grow: 1;
 }
 
 #calculator-container {
     display: flex;
     background-color: yellow;
     justify-content: center;
+    flex-grow: 1;
 }
 
 .calculator {
