--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0;
-    align-items: stretch;
+    height: 100vh;
 }
 
 #title-container {
@@ -15,11 +15,14 @@ body {
     display: flex;
     background-color: yellow;
     justify-content: center;
+    flex-grow: 1;
+    padding: 16px;
 }
 
 .calculator {
     display: flex;
     flex-direction: column;
+    width: 50%;
     background-color: green;
     border-radius: 16px;
     padding: 16px;
@@ -36,20 +39,22 @@ body {
     align-items: center;
     background-color: lightcyan;
     border-radius: 8px;
+    flex-grow: 1;
 }
 
 .buttons-container {
     display: flex;
     flex-direction: row;
-    justify-content: center;
     background-color: yellowgreen;
     padding: 8px;
     border-radius: 8px;
+    flex-grow: 1;
 }
 
 .number-container {
     display: grid;
     grid-template-columns: auto auto auto;
+    flex-grow: 1;
 }
 
 .operations-container {
